# Quotes-web

./: .env  README.md  docker-compose.yaml  pyproject.toml
quotes_web_project/: manage.py
quotes_web_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
quotes_web_project/quotes/managment/commands/: scrape_quotes.py
quotes_web_project/quotes/migrations/: 0001_initial.py  0002_author_created_at_quote_created_at_and_more.py  0003_author_description.py  0004_alter_author_born_date_alter_author_born_location.py
quotes_web_project/quotes/static/quotes/: add_quotes.css  style.css
quotes_web_project/quotes/templates/quotes/: author.html  base.html  index.html  quotes.html  quotes_by_tag.html  tag_list.html  top_tags.html
quotes_web_project/quotes/templatetags/: extract.py  quote_tags.py
quotes_web_project/quotes_scraper/quotes_scraper/: settings.py
quotes_web_project/quotes_scraper/quotes_scraper/spiders/: quote_spider.py
quotes_web_project/quotes_web_project/: asgi.py  settings.py  urls.py  wsgi.py
quotes_web_project/users/: forms.py  models.py  urls.py  views.py
quotes_web_project/users/migrations/: 0001_initial.py  0002_alter_profile_user.py
quotes_web_project/users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  register.html
quotes_web_project/utils/: add_quotes_to_mogodb.py  authors.json  migration.py  quotes.json  tempCodeRunnerFile.py
