[tool.poetry]
name = "goit-pyweb-hw-10"
version = "0.1.0"
description = ""
authors = ["N0yhz <vutunhzyonh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
psycopg2 = "^2.9.10"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
